add_subdirectory("lib")
add_subdirectory("common")
add_subdirectory("asio")
add_subdirectory("memory")
add_subdirectory("crypto")
add_subdirectory("net")
add_subdirectory("http")
add_subdirectory("ws")
add_subdirectory("rtcp")
add_subdirectory("rtp")
add_subdirectory("rtp-packetization")
add_subdirectory("srtp")
add_subdirectory("dtls")
add_subdirectory("rtp-session")
add_subdirectory("sdp")
add_subdirectory("stun")
add_subdirectory("mdns")
add_subdirectory("ice")
add_subdirectory("rtsp")
add_subdirectory("webrtc")
add_subdirectory("audio")
add_subdirectory("video")
